--- a/M2_double_pendulum.ipynb
+++ b/M2_double_pendulum.ipynb
@@ -20,15 +20,46 @@
     "title: Double Pendulum Simulation\n",
     "description: An example for numerical simulation of nonlinear ODE's\n",
     "author: Daning H.\n",
-    "show-code: True\n",
+    "show-code: False\n",
     "show-prompt: False\n",
+    "params:\n",
+    "    G:\n",
+    "        input: slider\n",
+    "        label: Acceleration due to gravity, in m/s^2\n",
+    "        value: 9.8\n",
+    "        min: 0.1\n",
+    "        max: 100\n",
+    "    L1:\n",
+    "        input: slider\n",
+    "        label: Length of pendulum 1 in m\n",
+    "        value: 1.0\n",
+    "        min: 0.1\n",
+    "        max: 10\n",
+    "    L2:\n",
+    "        input: slider\n",
+    "        label: Length of pendulum 2 in m\n",
+    "        value: 1.0\n",
+    "        min: 0.1\n",
+    "        max: 10\n",
+    "    M1:\n",
+    "        input: slider\n",
+    "        label: Mass of pendulum 1 in kg\n",
+    "        value: 1.0\n",
+    "        min: 0.1\n",
+    "        max: 10\n",
+    "    M2:\n",
+    "        input: slider\n",
+    "        label: Mass of pendulum 2 in kg\n",
+    "        value: 1.0\n",
+    "        min: 0.1\n",
+    "        max: 10\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6fea6cde",
+   "id": "d737bfd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,17 +75,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5f57548f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G  = 9.8  # acceleration due to gravity, in m/s^2\n",
+    "L1 = 1.0  # length of pendulum 1 in m\n",
+    "L2 = 1.0  # length of pendulum 2 in m\n",
+    "M1 = 1.0  # mass of pendulum 1 in kg\n",
+    "M2 = 1.0  # mass of pendulum 2 in kg"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "ad7cd627",
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = 9.8  # acceleration due to gravity, in m/s^2\n",
-    "L1 = 1.0  # length of pendulum 1 in m\n",
-    "L2 = 1.0  # length of pendulum 2 in m\n",
-    "M1 = 1.0  # mass of pendulum 1 in kg\n",
-    "M2 = 1.0  # mass of pendulum 2 in kg\n",
-    "\n",
     "def derivs(state, t):\n",
     "    dydx = np.zeros_like(state)\n",
     "    dydx[0] = state[1]\n",
@@ -2646,7 +2685,7 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(4,4))\n",
+    "fig = plt.figure(figsize=(6,6))\n",
     "ax = fig.add_subplot(111, autoscale_on=False, xlim=(-2, 2), ylim=(-2, 2))\n",
     "ax.set_title('Double Pendulum - See when it repeats itself')\n",
     "\n",
@@ -2676,7 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "299d373f",
+   "id": "3290858f",
    "metadata": {},
    "outputs": [],
    "source": []
