--- a/M3_EVP_for_IVP.ipynb
+++ b/M3_EVP_for_IVP.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b83e39c",
+   "id": "d2ed3eef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd134100",
+   "id": "95e1aa56",
    "metadata": {},
    "source": [
     "We consider an initial value problem defined by a 2D ODE\n",
@@ -101,13 +101,15 @@
     "y(t) = c_1\\exp(\\lambda_1 t) x_1 + c_2\\exp(\\lambda_2 t) x_2\n",
     "$$\n",
     "\n",
-    "*Think about how you would compute $c=[c_1, c_2]^T$*"
+    "*Think about how you would compute $c=[c_1, c_2]^T$*\n",
+    "\n",
+    "Below we visualize the solution with a user-specified step size.  Note the solution is **exact**."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2e7a0d00",
+   "id": "7c8e28e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1f7cf1a3",
+   "id": "3a4fcf61",
    "metadata": {},
    "outputs": [
     {
@@ -2575,15 +2577,8 @@
     "\n",
     "fig.update_layout(\n",
     "    sliders=sliders,\n",
-    "    xaxis_title=\"x\",\n",
-    "    yaxis_title=\"y\",\n",
-    "#     autosize=False,\n",
-    "#     width=800,\n",
-    "#     height=800\n",
-    ")\n",
-    "\n",
-    "# fig.update_xaxes(range=[-2.0, 2.0])\n",
-    "# fig.update_yaxes(range=[-2.0, 2.0])\n",
+    "    xaxis_title=\"y1\",\n",
+    "    yaxis_title=\"y2\")\n",
     "\n",
     "fig.show()"
    ]
@@ -2591,7 +2586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39df4d1c",
+   "id": "6e187bd2",
    "metadata": {},
    "outputs": [],
    "source": []
