A simple shock example.

--- a/M5_2_1st_moc_2d.ipynb
+++ b/M5_2_1st_moc_2d.ipynb
@@ -46,7 +46,7 @@
     "2. Fixed frame: Behavior of the solution if we stay at the initial coordinates.\n",
     "3. The complete solution in $(x,t)$ plane, with a few characteristics and the moving frame visualized.\n",
     "\n",
-    "At last, a 3D interactive plot of the solution is also provided."
+    "In another application, a 3D interactive plot of the solution is also provided."
    ]
   },
   {
