--- a/M1_periodic_excite.ipynb
+++ b/M1_periodic_excite.ipynb
@@ -49858,8 +49858,8 @@
     "fig.update_yaxes(title_text='r(t)', range=[-1.05,1.05], row=1, col=1)\n",
     "fig.update_xaxes(title_text='t', row=2, col=1)\n",
     "fig.update_yaxes(title_text='y(t)', range=[np.min(res), np.max(res)], row=2, col=1)\n",
-    "fig.update_xaxes(title_text='Im', range=[-3,0.1], row=1, col=2)\n",
-    "fig.update_yaxes(title_text='Re', range=[-4,4], row=1, col=2)\n",
+    "fig.update_xaxes(title_text='Re', range=[-3,0.1], row=1, col=2)\n",
+    "fig.update_yaxes(title_text='Im', range=[-4,4], row=1, col=2)\n",
     "\n",
     "fig.update_layout(\n",
     "    sliders=sliders,\n",
