--- a/M2_Euler_method_comparison.ipynb
+++ b/M2_Euler_method_comparison.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "case = 2\n",
+    "case = '2'\n",
     "EE = True\n",
     "IE = True\n",
     "R2 = True\n",
@@ -88,10 +88,10 @@
     "T  = 0.5\n",
     "y0 = 1.0\n",
     "\n",
-    "if case == 1:\n",
+    "if case == '1':\n",
     "    func = lambda y, t: -20*y\n",
     "    fsol = lambda t: np.exp(-20*t)\n",
-    "elif case == 2:\n",
+    "elif case == '2':\n",
     "    func = lambda y, t: -20*y+20*t*t+2*t\n",
     "    fsol = lambda t: np.exp(-20*t)+t*t\n",
     "else:\n",
