try to force rebuilding heroku

--- a/M4_signal_denoise.ipynb
+++ b/M4_signal_denoise.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "From FT, we can obtain the spectrum of the measure signal, i.e., the magnitudes of the frequency components in the signal.  Looking at the example below, one can see that there is a spike at frequency 1 Hz, which corresponds to our original sinusoidal signal.  But there are also some low-amplitude high-frequency components throughout the spectrum; these are due to the noise.\n",
     "\n",
-    "Intuitively, we could **filter** the spectrum by removing the high-frequency components, and perform **inverse FT** to recover time-domain signal from the filtered spectrum.  This technique is called **low-pass filtering** (\"low\" for low-frequency).  From the results below, one can see that the filtering can effectively remove the noise and recover the sinusoidal signal."
+    "Intuitively, we could **filter** the spectrum by removing the high-frequency components, and perform **inverse FT** to recover time-domain signal from the filtered spectrum.  This technique is called **low-pass filtering** (\"low\" for low-frequency).  From the results below, one can see that the filtering can effectively remove the noise and recover the sinusoidal signal.  Yet, for this particular example, there is an even better way to denoise the signal - think about what it is."
    ]
   },
   {
